@startuml
' ============================================================
' ERD - Hệ thống Xác thực
' Tên viết tắt dự án: auth
' NestJS + Better Auth + PostgreSQL + Drizzle ORM
' ============================================================

skinparam class {
  BackgroundColor #F8F8F8
  BorderColor #333333
  ArrowColor #333333
  AttributeFontSize 12
}
skinparam package {
  BackgroundColor #FFFFFF
  BorderColor #666666
}

title Hệ thống Xác thực - Sơ đồ Quan hệ Thực thể

skinparam classFontSize 10
skinparam classAttributeFontSize 9
skinparam nodesep 15
skinparam ranksep 15

' ============================================================
' MODULE: Xác thực (Cơ sở dữ liệu: auth_db)
' Xử lý: tài khoản người dùng, phiên, tài khoản (Better Auth), xác minh, vai trò
' Giải quyết: FR-001, FR-002, FR-003, FR-004, FR-005, FR-006, FR-012, FR-013
' ============================================================
package "Module Xác thực" #E8F4E8 {
  entity "auth_users" as users {
    * id : uuid <<PK>>
    --
    * name : varchar(100)
    * email : varchar(255) <<UNIQUE>>
    * phone : varchar(20) <<UNIQUE>>
    * email_verified : boolean DEFAULT false
    * phone_verified : boolean DEFAULT false
    * image : text
    * created_at : timestamp
    * updated_at : timestamp
  }

  entity "auth_sessions" as sessions {
    * id : varchar(255) <<PK>>
    --
    * user_id : uuid <<FK>>
    * expires_at : timestamp
    * token : varchar(255) <<UNIQUE>>
    * ip_address : varchar(45)
    * user_agent : text
    * created_at : timestamp
    * updated_at : timestamp
  }

  entity "auth_accounts" as accounts {
    * id : varchar(255) <<PK>>
    --
    * user_id : uuid <<FK>>
    * account_id : varchar(255)
    * provider_id : varchar(50)
    * password : varchar(255)
    * created_at : timestamp
    * updated_at : timestamp
  }

  entity "auth_verification" as verification {
    * id : varchar(255) <<PK>>
    --
    * identifier : varchar(255)
    * value : varchar(255)
    * expires_at : timestamp
    * created_at : timestamp
    * updated_at : timestamp
  }

  entity "auth_roles" as roles {
    * id : uuid <<PK>>
    --
    * name : varchar(50) <<UNIQUE>>
    * description : text
    * created_at : timestamp
  }

  entity "auth_user_roles" as user_roles {
    * id : uuid <<PK>>
    --
    * user_id : uuid <<FK>>
    * role_id : uuid <<FK>>
    * created_at : timestamp
  }
}

' ============================================================
' MODULE: SMS (Cơ sở dữ liệu: sms_db)
' Xử lý: nhật ký gửi SMS, theo dõi, kiểm toán
' Giải quyết: FR-012, FR-013, DR-006
' ============================================================
package "Module SMS" #E0F7FA {
  entity "sms_logs" as sms_logs {
    * id : uuid <<PK>>
    --
    * user_id : uuid
    * phone : varchar(20)
    * message_type : varchar(50)
    * template_id : varchar(100)
    * status : enum('pending','sent','delivered','failed')
    * provider : varchar(50)
    * provider_message_id : varchar(255)
    * error_message : text
    * retry_count : int DEFAULT 0
    * idempotency_key : varchar(255) <<UNIQUE>>
    * created_at : timestamp
    * sent_at : timestamp
    * delivered_at : timestamp
  }
}

' ============================================================
' MỐI QUAN HỆ
' ============================================================

' --- Xác thực ---
users ||--o{ sessions : "có"
users ||--o{ accounts : "có"
users ||--o{ user_roles : "được gán"
roles ||--o{ user_roles : "được cấp cho"

' --- SMS (tham chiếu cấp ứng dụng, liên cơ sở dữ liệu) ---
users ||--o{ sms_logs : "nhận SMS"

@enduml
